--- a/reactproject/index.html
+++ b/reactproject/index.html
@@ -10,6 +10,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.5.0"></script>
     <!-- <script src="./bootstrap-5.3.8-dist/bootstrap-5.3.8-dist/js/bootstrap.min.js"></script> -->
   </body>
 </html>
